# PixelMixer

./: .gitignore  README.md
PixelMixer/: CMakeLists.txt  PixelMixer.sln
PixelMixer/PixelMixer/: App.cpp  App.h  ConfigPanel.cpp  FileDropTarget.cpp  FileDropTarget.h  HeaderPanel.cpp  HeaderPanel.h  Main.cpp  MainFrame.cpp  MainFrame.h  Makefile  PixelMixer.vcxproj  ViewportPanel.cpp  ViewportPanel.h
PixelMixer/PixelMixer/Debug/: PixelMixer.exe.recipe  vc143.idb
PixelMixer/PixelMixer/Debug/PixelMixer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PixelMixer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PixelMixer/PixelMixer/res/shaders/: Display.glsl  DisplayPreview.glsl  SimpleSort.glsl  Step1.glsl  Test.glsl  Test.shader
PixelMixer/PixelMixer/src/: App.cpp  App.h  BasicSettingsPanel.cpp  BasicSettingsPanel.h  Button.cpp  Button.h  ConfigPanel.cpp  ConfigPanel.h  ConfigTabs.cpp  ConfigTabs.h  DropdownLineBreak.h  FileDropTarget.cpp  FrameBuffer.cpp  FrameBuffer.h  HeaderPanel.cpp  HeaderPanel.h  IndexBuffer.cpp  IndexBuffer.h  InputPanel.cpp  InputPanel.h  MainFrame.cpp  MainFrame.h  OutputPanel.h  Palette.h  Renderer.cpp  Renderer.h  SettingsPanel.cpp  SettingsPanel.h  Shader.cpp  Shader.h  StatsPanel.cpp  StatsPanel.h  TextSlider.cpp  TextSlider.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  (+3 more)
PixelMixer/PixelMixer/x64/Debug/: PixelMixer.exe.recipe  vc143.idb
PixelMixer/PixelMixer/x64/Debug/PixelMixer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PixelMixer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PixelMixer/PixelMixer/x64/Release/: PixelMixer.exe.recipe  PixelMixer.iobj  PixelMixer.ipdb
PixelMixer/PixelMixer/x64/Release/PixelMixer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PixelMixer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PixelMixer/include/: ConfigPanel.h  IndexBuffer.h  MainFrame.h  SettingsPanel.h  Shader.h  VertexArray.h  VertexBuffer.h
PixelMixer/res/: rc.aps  rc.rc
PixelMixer/src/: Button.cpp  IndexBuffer.cpp  InputPanel.cpp  MainFrame.cpp  OutputPanel.cpp  Renderer.cpp  SettingsPanel.cpp  Texture.cpp  VertexArray.cpp  main.cpp
PixelSorter/: PixelSorter.sln
PixelSorter/PixelSorter/: Main.cpp  PixelSorter.vcxproj
PixelSorter/PixelSorter/x64/Debug/: PixelSorter.exe.recipe
PixelSorter/PixelSorter/x64/Debug/PixelSorter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog
